<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/popup_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/_6sdp"
            android:layout_gravity="center"
            android:text="@string/materialPermitDetails"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgClose"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:src="@drawable/pic_cancle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EditName"
            style="@style/medium_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:hint="@string/nameAndDescription"
            android:inputType="text"
            android:textColorHint="#707070"
            android:textSize="@dimen/_12sdp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EditSerialNo"
            style="@style/medium_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:hint="@string/serialNo"
            android:inputType="text"
            android:textColorHint="#707070"
            android:textSize="@dimen/_12sdp" />
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/EditQuantity"
            style="@style/medium_font"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:hint="@string/quantity"
            android:inputType="text"
            android:textColorHint="#707070"
            android:textSize="@dimen/_12sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/Add"
            android:textColor="#fff"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:strokeColor="#414F6C"
            app:strokeWidth="1dp" />
    </LinearLayout>

</LinearLayout>