<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_img"
    tools:context=".activities.MaterialPermitFormActivity">

    <include
        android:id="@+id/relative_internet"
        layout="@layout/no_internet" />

    <RelativeLayout
        android:id="@+id/relative_ui"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/txtVersion">

        <LinearLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">

            <ImageView
                android:id="@+id/back_image"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="25dp"
                android:autoMirrored="true"
                android:src="@drawable/backimg" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/company_logo"
            android:layout_width="@dimen/_180sdp"
            android:layout_height="@dimen/_70sdp"
            android:layout_below="@id/relative"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/company_logo">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:padding="15dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/MaterialPermit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/_15sdp"/>
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioEntry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Entry"
                        android:checked="true"
                        android:textSize="@dimen/_18sdp"/>
                    <RadioButton
                        android:id="@+id/radioExit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Exit"
                        android:textSize="@dimen/_18sdp"/>
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:text="@string/From"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_13sdp"/>
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/baseline_calendar_month_24"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_35sdp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/To"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_13sdp"/>
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:src="@drawable/baseline_calendar_month_24"/>
                    </LinearLayout>
                </LinearLayout>

                <Spinner
                    android:id="@+id/spinnerRefDoc"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinnerPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinnerLocation"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinnerPertains"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />

                <Spinner
                    android:id="@+id/spinnerEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMaterialDetails"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/Add"
                    android:textColor="#fff"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="#414F6C"
                    app:strokeWidth="1dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewMeetingDetailsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnMaterialAddMore"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="@dimen/_120sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/add_circle"
                    android:text="@string/AddMore"
                    android:textColor="#fff"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="#414F6C"
                    app:strokeWidth="1dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_6sdp"
                    android:background="@color/colorPrimary"
                    android:layout_gravity="center"
                    android:text="@string/SupplierDetails"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13sdp"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitSupplierName"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/SupplierName"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitEmail"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitName"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/Name"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/MaterialPermitCCP"
                        style="@style/medium_font"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:ccp_showFlag="true"
                        app:ccp_showNameCode="false"
                        app:ccp_textSize="@dimen/_12sdp" />
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/MaterialPermitMobile"
                        style="@style/medium_font"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_38sdp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:hint="@string/enter_mobile"
                        android:maxLength="10"
                        android:inputType="number"
                        android:textColorHint="#707070"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitIDNumber"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/IDNumber"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />
                <Spinner
                    android:id="@+id/spinnerMaterialNationality"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    style="@style/medium_font"
                    android:textSize="@dimen/_12sdp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitVehicleNumber"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/VehicleNumberM"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/MaterialPermitVehicleType"
                    style="@style/medium_font"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_38sdp"
                    android:hint="@string/VehicleType"
                    android:textColorHint="#707070"
                    android:textSize="@dimen/_12sdp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_next"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/Submit"
                    android:textColor="#fff"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:cornerRadius="5dp"
                    app:strokeColor="#414F6C"
                    app:strokeWidth="1dp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:text="version"
        android:textColor="@color/gray"
        android:textSize="12sp" />

</RelativeLayout>